--- a/translations/kangyur/placeholders/076-009_toh355-the_sutra_that_teaches_the_ripening_of_virtuous_and_nonvirtuous_actions.xml
+++ b/translations/kangyur/placeholders/076-009_toh355-the_sutra_that_teaches_the_ripening_of_virtuous_and_nonvirtuous_actions.xml
@@ -4,18 +4,19 @@
     <teiHeader>
         <fileDesc>
             <titleStmt>
-                <title type="mainTitle" xml:lang="Bo-Ltn">dge ba dang mi dge ba'i las kyi rnam par smin pa bstan pa'i mdo/</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">[no Sanskrit title]</title>
                 <title type="mainTitle" xml:lang="en">The Sūtra that Teaches the Ripening of Virtuous and Non-Virtuous Actions</title>
-                <author role="translatorMain" ref="contributors.xml#team-9"/>
-                <author role="translatorEng" ref="contributors.xml#person-67">Lowell Cook</author>
-                <editor role="reviser" ref="contributors.xml#person-50">Dr. Andreas Doctor</editor>
-                <consultant role="projectManager" ref="contributors.xml#person-50">Dr. Andreas Doctor</consultant>
-                <editor role="projectEditor" ref="contributors.xml#person-250">Rory Lindsay</editor>
-                <editor role="associateEditor" ref="contributors.xml#person-349">Joie Chen</editor>
+                <title type="mainTitle" xml:lang="Sa-Ltn">[no Sanskrit title]</title>
+                <title type="mainTitle" xml:lang="Bo-Ltn">dge ba dang mi dge ba'i las kyi rnam par smin pa bstan pa'i mdo/</title>
+                <author role="translatorMain" ref="eft:team-9"/>
+                <author role="translatorEng" ref="eft:person-67">Lowell Cook</author>
+                <editor role="reviser" ref="eft:person-50">Andreas Doctor</editor>
+                <consultant role="projectManager" ref="eft:person-50">Andreas Doctor</consultant>
+                <editor role="projectEditor" ref="eft:person-250">Rory Lindsay</editor>
+                <editor role="associateEditor" ref="eft:person-349">Joie Chen</editor>
+                <editor role="copyEditor" ref="eft:person-92">Laura Goetz</editor>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.6 <date>2020</date>
+                <edition>v 0.0.7 <date>2020</date>
                 </edition>
             </editionStmt>
             <publicationStmt status="2.d">
@@ -34,14 +35,18 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-08-02T10:06:55.881Z" user="admin">02/08/2022 10:06:55</note>
-            
-    <note type="updated" update="text-version" value="0.0.1" date-time="2020-04-22T10:18:04.685Z" user="line-tofte">0.0.1</note>
-    <note type="updated" update="translation-status" value="2.h" date-time="2020-11-10T08:00:09.539Z" user="line-tofte">2.h</note>
-    <note type="updated" update="text-version" value="0.0.2" date-time="2020-11-10T08:00:09.539Z" user="line-tofte">Auto (update-publication-status)</note>
-    <note type="updated" update="translation-status" value="2.g" date-time="2021-05-25T12:15:45.652Z" user="line-tofte">2.g</note>
-    <note type="updated" update="text-version" value="0.0.3" date-time="2021-05-25T12:15:45.652Z" user="line-tofte">Auto (update-publication-status)</note>
-    <note type="updated" update="text-version" value="0.0.4" date-time="2021-05-25T12:16:27.871Z" user="line-tofte">Auto (update-contributors)</note>    <note type="updated" update="translation-status" value="2.f" date-time="2022-04-25T11:41:16.911Z" user="line-tofte">2.f</note>    <note type="updated" update="text-version" value="0.0.5" date-time="2022-04-25T11:41:16.911Z" user="line-tofte">Auto (update-publication-status)</note>    <note type="updated" update="translation-status" value="2.d" date-time="2022-08-02T10:06:48.111Z" user="line-tofte">2.d</note>    <note type="updated" update="text-version" value="0.0.6" date-time="2022-08-02T10:06:48.111Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="lastUpdated" date-time="2022-08-02T10:07:43.721Z" user="admin">02/08/2022 10:07:43</note>
+                <note type="updated" update="text-version" value="0.0.1" date-time="2020-04-22T10:18:04.685Z" user="line-tofte">0.0.1</note>
+                <note type="updated" update="translation-status" value="2.h" date-time="2020-11-10T08:00:09.539Z" user="line-tofte">2.h</note>
+                <note type="updated" update="text-version" value="0.0.2" date-time="2020-11-10T08:00:09.539Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="translation-status" value="2.g" date-time="2021-05-25T12:15:45.652Z" user="line-tofte">2.g</note>
+                <note type="updated" update="text-version" value="0.0.3" date-time="2021-05-25T12:15:45.652Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="text-version" value="0.0.4" date-time="2021-05-25T12:16:27.871Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="translation-status" value="2.f" date-time="2022-04-25T11:41:16.911Z" user="line-tofte">2.f</note>
+                <note type="updated" update="text-version" value="0.0.5" date-time="2022-04-25T11:41:16.911Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="translation-status" value="2.d" date-time="2022-08-02T10:06:48.111Z" user="line-tofte">2.d</note>
+                <note type="updated" update="text-version" value="0.0.6" date-time="2022-08-02T10:06:48.111Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="text-version" value="0.0.7" date-time="2022-08-02T10:07:36.043Z" user="line-tofte">Auto (update-contributors)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
