--- a/translations/kangyur/placeholders/096-054_toh805-the_tantra_the_questions_of_subahu.xml
+++ b/translations/kangyur/placeholders/096-054_toh805-the_tantra_the_questions_of_subahu.xml
@@ -16,9 +16,10 @@
                 <consultant role="projectManager" ref="eft:person-200">Kaia Fischer</consultant>
                 <editor role="projectEditor" ref="eft:person-74">Ryan Damron</editor>
                 <editor role="copyEditor" ref="eft:person-249">Konchog Norbu</editor>
+                <editor role="projectEditor" ref="eft:person-50">Andreas Doctor</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.11 <date>2020</date>
+                <edition>v 0.0.12 <date>2020</date>
                 </edition>
             </editionStmt>
             <publicationStmt status="2.b">
@@ -37,32 +38,27 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-08-02T10:22:27.673Z" user="admin">02/08/2022 10:22:27</note>
+                <note type="lastUpdated" date-time="2022-08-02T10:23:09.994Z" user="admin">02/08/2022 10:23:09</note>
                 <note type="updated" update="text-version" value="0.0.1" date-time="2020-03-05T08:42:54.93Z" user="line-tofte">0.0.1</note>
                 <note type="updated" update="translation-status" value="2.h" date-time="2021-01-04T12:42:03.731Z" user="line-tofte">2.h</note>
                 <note type="updated" update="text-version" value="0.0.2" date-time="2021-01-04T12:42:03.731Z" user="line-tofte">Auto (update-publication-status)</note>
-            
-    <note type="updated" update="translation-status" value="2.g" date-time="2021-01-08T10:57:14.479Z" user="line-tofte">2.g</note>
-    <note type="updated" update="text-version" value="0.0.3" date-time="2021-01-08T10:57:14.479Z" user="line-tofte">Auto (update-publication-status)</note>
-    <note type="updated" update="text-version" value="0.0.4" date-time="2021-01-08T10:57:41.838Z" user="line-tofte">Auto (update-contributors)</note>
-    <note type="updated" update="translation-status" value="2.f" date-time="2021-09-08T07:11:18.743Z" user="line-tofte">2.f</note>
-    <note type="updated" update="text-version" value="0.0.5" date-time="2021-09-08T07:11:18.743Z" user="line-tofte">Auto (update-publication-status)</note>
-    <note type="updated" update="translation-status" value="2.e" date-time="2021-12-06T16:09:27.289Z" user="line-tofte">2.e</note>
-
-    <note type="updated" update="text-version" value="0.0.6" date-time="2021-12-06T16:09:27.289Z" user="line-tofte">Auto (update-publication-status)</note>
-
-    <note type="updated" update="text-version" value="0.0.7" date-time="2021-12-06T16:09:58.513Z" user="line-tofte">Auto (update-contributors)</note>
-
-    <note type="updated" update="text-version" value="0.0.8" date-time="2021-12-06T16:10:14.465Z" user="line-tofte">Auto (update-contributors)</note>
-
-    <note type="updated" update="translation-status" value="2.d" date-time="2022-01-24T09:29:57.424Z" user="line-tofte">2.d</note>
-
-    <note type="updated" update="text-version" value="0.0.9" date-time="2022-01-24T09:29:57.424Z" user="line-tofte">Auto (update-publication-status)</note>
-    <note type="updated" update="translation-status" value="2.c" date-time="2022-07-11T08:40:49.03Z" user="line-tofte">2.c</note>
-    <note type="updated" update="text-version" value="0.0.10" date-time="2022-07-11T08:40:49.03Z" user="line-tofte">Auto (update-publication-status)</note>
-    <note type="updated" update="translation-status" value="2.b" date-time="2022-08-02T10:22:19.947Z" user="line-tofte">2.b</note>
-    <note type="updated" update="text-version" value="0.0.11" date-time="2022-08-02T10:22:19.947Z" user="line-tofte">Auto (update-publication-status)</note>
-</notesStmt>
+                <note type="updated" update="translation-status" value="2.g" date-time="2021-01-08T10:57:14.479Z" user="line-tofte">2.g</note>
+                <note type="updated" update="text-version" value="0.0.3" date-time="2021-01-08T10:57:14.479Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="text-version" value="0.0.4" date-time="2021-01-08T10:57:41.838Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="translation-status" value="2.f" date-time="2021-09-08T07:11:18.743Z" user="line-tofte">2.f</note>
+                <note type="updated" update="text-version" value="0.0.5" date-time="2021-09-08T07:11:18.743Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="translation-status" value="2.e" date-time="2021-12-06T16:09:27.289Z" user="line-tofte">2.e</note>
+                <note type="updated" update="text-version" value="0.0.6" date-time="2021-12-06T16:09:27.289Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="text-version" value="0.0.7" date-time="2021-12-06T16:09:58.513Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="text-version" value="0.0.8" date-time="2021-12-06T16:10:14.465Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="translation-status" value="2.d" date-time="2022-01-24T09:29:57.424Z" user="line-tofte">2.d</note>
+                <note type="updated" update="text-version" value="0.0.9" date-time="2022-01-24T09:29:57.424Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="translation-status" value="2.c" date-time="2022-07-11T08:40:49.03Z" user="line-tofte">2.c</note>
+                <note type="updated" update="text-version" value="0.0.10" date-time="2022-07-11T08:40:49.03Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="translation-status" value="2.b" date-time="2022-08-02T10:22:19.947Z" user="line-tofte">2.b</note>
+                <note type="updated" update="text-version" value="0.0.11" date-time="2022-08-02T10:22:19.947Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="text-version" value="0.0.12" date-time="2022-08-02T10:23:02.239Z" user="line-tofte">Auto (update-contributors)</note>
+            </notesStmt>
         </fileDesc>
     </teiHeader>
     <text>
