--- a/translations/kangyur/placeholders/034-007_toh19,554-the_perfection_of_wisdom_for_kausika.xml
+++ b/translations/kangyur/placeholders/034-007_toh19,554-the_perfection_of_wisdom_for_kausika.xml
@@ -4,22 +4,22 @@
     <teiHeader>
         <fileDesc>
             <titleStmt>
-                <title type="mainTitle" xml:lang="Bo-Ltn">sher phyin kau shi ka/</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">kauśikaprajñāpāramitā</title>
                 <title type="mainTitle" xml:lang="en">The Perfection of Wisdom for Kauśika</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">kauśikaprajñāpāramitā</title>
+                <title type="mainTitle" xml:lang="Bo-Ltn">sher phyin kau shi ka/</title>
+                <title type="otherTitle" xml:lang="Sa-Ltn">āryakauśikaprajñāpāramitānāma</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa shes rab kyi pha rol tu phyin pa kau shi ka zhes bya ba</title>
-                <title type="otherTitle" xml:lang="Sa-Ltn">āryakauśikaprajñāpāramitānāma</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa shes rab kyi pha rol tu phyin pa kau shi ka zhes bya ba/</title>
-                <title type="otherTitle" xml:lang="Sa-Ltn">āryakauśikaprajñāpāramitānāma</title>
-                <author role="translatorMain" ref="contributors.xml#team-34"/>
-                <consultant role="projectManager" ref="contributors.xml#person-370">Taryn Sue</consultant>
-                <author role="translatorEng" ref="contributors.xml#person-370">Taryn Sue</author>
-                <author role="translatorEng" ref="contributors.xml#person-371">Daigengna Duoer</author>
-                <author role="translatorEng" ref="contributors.xml#person-373">Caley Smith</author>
-                <editor role="projectEditor" ref="contributors.xml#person-289">Nathaniel Rich</editor>
+                <author role="translatorMain" ref="eft:team-34"/>
+                <consultant role="projectManager" ref="eft:person-370">Taryn Sue</consultant>
+                <author role="translatorEng" ref="eft:person-370">Taryn Sue</author>
+                <author role="translatorEng" ref="eft:person-371">Daigengna Duoer</author>
+                <author role="translatorEng" ref="eft:person-373">Caley Smith</author>
+                <editor role="projectEditor" ref="eft:person-289">Nathaniel Rich</editor>
+                <editor role="copyEditor" ref="eft:person-92">Laura Goetz</editor>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.10 <date>2021</date>
+                <edition>v 0.0.11 <date>2021</date>
                 </edition>
             </editionStmt>
             <publicationStmt status="2.d">
@@ -47,17 +47,24 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-08-02T10:39:39.451Z" user="admin">02/08/2022 10:39:39</note>
-    <note type="updated" update="translation-status" value="3" date-time="2021-06-08T09:30:26.839Z" user="line-tofte">3</note>
-    <note type="updated" update="text-version" value="0.0.1" date-time="2021-06-08T09:30:26.839Z" user="line-tofte">0.0.1</note>
-    <note type="updated" update="text-version" value="0.0.2" date-time="2021-06-08T09:38:10.747Z" user="line-tofte">Auto (update-contributors)</note>
-    <note type="updated" update="text-version" value="0.0.3" date-time="2021-06-08T09:39:16.506Z" user="line-tofte">Auto (update-contributors)</note>
-    <note type="updated" update="text-version" value="0.0.4" date-time="2021-08-26T14:57:56.125Z" user="line-tofte">Auto (update-contributors)</note>
-    <note type="updated" update="translation-status" value="2.h" date-time="2021-09-03T10:20:51.708Z" user="line-tofte">2.h</note>
-    <note type="updated" update="text-version" value="0.0.5" date-time="2021-09-03T10:20:51.708Z" user="line-tofte">Auto (update-publication-status)</note>
-    <note type="updated" update="text-version" value="0.0.6" date-time="2021-09-09T08:25:53.764Z" user="line-tofte">Auto (update-contributors)</note>
-    <note type="updated" update="translation-status" value="2.g" date-time="2021-09-09T08:26:49.466Z" user="line-tofte">2.g</note>
-    <note type="updated" update="text-version" value="0.0.7" date-time="2021-09-09T08:26:49.466Z" user="line-tofte">Auto (update-publication-status)</note>    <note type="updated" update="translation-status" value="2.f" date-time="2022-04-05T07:26:42.801Z" user="line-tofte">2.f</note>    <note type="updated" update="text-version" value="0.0.8" date-time="2022-04-05T07:26:42.801Z" user="line-tofte">Auto (update-publication-status)</note>    <note type="updated" update="translation-status" value="2.e" date-time="2022-07-14T13:28:06.742Z" user="line-tofte">2.e</note>    <note type="updated" update="text-version" value="0.0.9" date-time="2022-07-14T13:28:06.742Z" user="line-tofte">Auto (update-publication-status)</note>    <note type="updated" update="translation-status" value="2.d" date-time="2022-08-02T10:39:31.74Z" user="line-tofte">2.d</note>    <note type="updated" update="text-version" value="0.0.10" date-time="2022-08-02T10:39:31.74Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="lastUpdated" date-time="2022-08-02T10:40:45.026Z" user="admin">02/08/2022 10:40:45</note>
+                <note type="updated" update="translation-status" value="3" date-time="2021-06-08T09:30:26.839Z" user="line-tofte">3</note>
+                <note type="updated" update="text-version" value="0.0.1" date-time="2021-06-08T09:30:26.839Z" user="line-tofte">0.0.1</note>
+                <note type="updated" update="text-version" value="0.0.2" date-time="2021-06-08T09:38:10.747Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="text-version" value="0.0.3" date-time="2021-06-08T09:39:16.506Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="text-version" value="0.0.4" date-time="2021-08-26T14:57:56.125Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="translation-status" value="2.h" date-time="2021-09-03T10:20:51.708Z" user="line-tofte">2.h</note>
+                <note type="updated" update="text-version" value="0.0.5" date-time="2021-09-03T10:20:51.708Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="text-version" value="0.0.6" date-time="2021-09-09T08:25:53.764Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="translation-status" value="2.g" date-time="2021-09-09T08:26:49.466Z" user="line-tofte">2.g</note>
+                <note type="updated" update="text-version" value="0.0.7" date-time="2021-09-09T08:26:49.466Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="translation-status" value="2.f" date-time="2022-04-05T07:26:42.801Z" user="line-tofte">2.f</note>
+                <note type="updated" update="text-version" value="0.0.8" date-time="2022-04-05T07:26:42.801Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="translation-status" value="2.e" date-time="2022-07-14T13:28:06.742Z" user="line-tofte">2.e</note>
+                <note type="updated" update="text-version" value="0.0.9" date-time="2022-07-14T13:28:06.742Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="translation-status" value="2.d" date-time="2022-08-02T10:39:31.74Z" user="line-tofte">2.d</note>
+                <note type="updated" update="text-version" value="0.0.10" date-time="2022-08-02T10:39:31.74Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="text-version" value="0.0.11" date-time="2022-08-02T10:40:37.328Z" user="line-tofte">Auto (update-contributors)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
