--- a/translations/kangyur/translations/066-015_toh257-the_sutra_of_the_quintessence_of_the_sun.xml
+++ b/translations/kangyur/translations/066-015_toh257-the_sutra_of_the_quintessence_of_the_sun.xml
@@ -85,11 +85,19 @@
 
 
 
+        <editor role="TEImarkupEditor" ref="eft:person-391">Sameer Dhingra</editor>
+
+
+
+        <editor role="finalReviewer" ref="eft:person-74">Ryan Damron</editor>
+
+
+
         <sponsor ref="sponsors.xml#sponsor-121">Manju Sun and Jamyang Sun</sponsor>
       </titleStmt>
 
       <editionStmt>
-                <edition>v 0.0.9 <date>2022</date>
+                <edition>v 0.0.10 <date>2022</date>
                 </edition>
             </editionStmt>
 
@@ -134,7 +142,7 @@
 
 
 
-        <note type="lastUpdated" date-time="2022-07-26T07:11:18.248Z" user="admin">26/07/2022 07:11:18</note>
+        <note type="lastUpdated" date-time="2022-08-02T13:45:54.864Z" user="admin">02/08/2022 13:45:54</note>
 
 
 
@@ -262,7 +270,11 @@
 
 
         <note type="updated" update="text-version" value="0.0.8" date-time="2022-07-14T13:14:55.232Z" user="martina-cotter">Updated folio error</note>
-          <note type="updated" update="text-version" value="0.0.9" date-time="2022-07-26T07:11:12.399Z" user="cabie-sim">Auto (update-titles)</note>
+
+
+
+        <note type="updated" update="text-version" value="0.0.9" date-time="2022-07-26T07:11:12.399Z" user="cabie-sim">Auto (update-titles)</note>
+          <note type="updated" update="text-version" value="0.0.10" date-time="2022-08-02T13:45:46.934Z" user="line-tofte">Auto (update-contributors)</note>
       </notesStmt>
     </fileDesc>
   </teiHeader>
