--- a/translations/kangyur/translations/036-002_toh44-31-chapter_31_the_ten_grounds.xml
+++ b/translations/kangyur/translations/036-002_toh44-31-chapter_31_the_ten_grounds.xml
@@ -31,7 +31,7 @@
                                 <sponsor ref="sponsors.xml#sponsor-99">Shakya Dewa and family</sponsor>
                         </titleStmt>
                         <editionStmt>
-                <edition>v 1.0.3 <date>2022</date>
+                <edition>v 1.0.5 <date>2022</date>
                 </edition>
             </editionStmt>
 
@@ -68,7 +68,7 @@
                                 </bibl>
                         </sourceDesc>
                         <notesStmt>
-                                <note type="lastUpdated" date-time="2022-06-10T16:18:35.308Z" user="admin">10/06/2022 16:18:35</note>
+                                <note type="lastUpdated" date-time="2022-08-03T14:34:15.604Z" user="admin">03/08/2022 14:34:15</note>
                                 <note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated
                                         version increment</note>
                                 <note type="updated" update="translation-status" value="2.f" date-time="2020-01-27T13:09:26.959Z" user="mike">2.f</note>
@@ -103,6 +103,8 @@
                                 <note type="updated" update="text-version" value="1.0.0" date-time="2021-09-17T16:49:27.24Z" user="celso">1.0.0</note>
                                 <note type="updated" update="text-version" value="1.0.1" date-time="2021-09-20T17:22:26.958Z" user="john">changed "very extensive" to Mahāvaipulya in long title and other refs. to it.</note>
                                 <note type="updated" update="text-version" value="1.0.2" date-time="2022-02-16T15:45:21.06Z" user="celso">Added new locations to glossary cache according to new hyphen rules</note>
+                            <note type="updated" update="text-version" value="1.0.4" date-time="2022-06-27T10:06:48.1Z" user="admin">Auto (script-increment-version-published)</note>
+                            <note type="updated" update="text-version" value="1.0.5" date-time="2022-08-03T14:34:11.366Z" user="john">Edited one passage, 1.439.</note>
                         </notesStmt>
                 </fileDesc>
         </teiHeader>
@@ -4403,19 +4405,19 @@
                                         <milestone unit="chunk" xml:id="UT22084-036-002-856"/>
                                         <p tid="593">The bodhisattva Vajra­garbha said, “O jinaputras! The bodhisattva who has completed the path of
                                                 the fifth bodhisattva bhūmi enters the sixth bodhisattva bhūmi. He enters it through the ten
-                                                equalities of phenomena. What are these ten? He enters the sixth bhūmi through these ten equalities:
-                                                (1) the equality of the absence of features in all phenomena; (2) the equality of the absence of
-                                                characteristics in all phenomena; (3) the equality of the absence of birth in all phenomena;
-                                                (4) the equality of all phenomena being without production; (5) the equality of detachment from all
-                                                phenomena; (6) the equality of the primordial purity of all phenomena; (7) the equality of the
-                                                unelaborateness of all phenomena; (8) the equality of the nonadoption and nonrejection of all
-                                                        phenomena;<note place="end" xml:id="UT22084-036-002-857"> In accordance with the Sanskrit
+                                                kinds of sameness of phenomena. What are these ten? He enters the sixth bhūmi through these ten kinds of sameness:
+                                                (1) the sameness of all phenomena in being without features; (2) the sameness of all phenomena in being without
+                                                characteristics; (3) the sameness of all phenomena in being without birth;
+                                                (4) the sameness of all phenomena in being without production; (5) the sameness of all phenomena in being
+                                                isolated; (6) the sameness of all phenomena in being primordially pure; (7) the sameness of all phenomena
+                                                in being without elaboration; (8) the sameness of all phenomena being without adoption and without 
+                                                rejection;<note place="end" xml:id="UT22084-036-002-857"> In accordance with the Sanskrit
                                                                 (<foreign xml:lang="Sa-Ltn" type="term">anāvyuhānirvyuha</foreign> = <foreign xml:lang="Sa-Ltn" type="term">anāvyuha</foreign> + <foreign xml:lang="Sa-Ltn" type="term">anirvyuha</foreign>), Vasubandhu, and the Chinese. The Tibetan separated
-                                                        “nonadoption” and “nonrejection” into two separate sentences, creating a list of
-                                                        eleven.</note> (9) the equality of all phenomena being the same as illusions, dreams,
-                                                hallucinations, echoes, the moon on water, reflections, and apparitions; and (10) the equality of
-                                                there not being in all phenomena the duality of the existence and nonexistence<note place="end" xml:id="UT22084-036-002-858"> According to the Sanskrit, Vasubandhu, and the Chinese.</note>
-                                                of things. <ref cRef="F.219.b" type="folio" xml:id="UT22084-036-002-2108"/>
+                                                        “without adoption” and “without rejection” into two separate sentences, creating a list of
+                                                        eleven.</note> (9) the sameness of all phenomena in being like illusions, dreams,
+                                                hallucinations, echoes, the moon on water, reflections, and apparitions; and (10) the sameness of all phenomena 
+                                                in being without the duality of existence and nonexistence.<note place="end" xml:id="UT22084-036-002-858"> According to the Sanskrit, Vasubandhu, and the Chinese.</note>
+                                                <ref cRef="F.219.b" type="folio" xml:id="UT22084-036-002-2108"/>
                                         </p>
                                         <milestone unit="chunk" xml:id="UT22084-036-002-859"/>
                                         <p tid="594">“He examines that nature of all phenomena, clarifying it,<note place="end" xml:id="UT22084-036-002-860"> The Sanskrit <foreign xml:lang="Sa-Ltn" type="term">anusṛjan</foreign> and Vasubandhu <foreign xml:lang="Bo-Ltn" type="term">byi dor
