--- a/translations/kangyur/placeholders/015-002_toh8-2-chapters_7_to_72_the_perfection_of_wisdom_in_one_hundred_thousand_lines.xml
+++ b/translations/kangyur/placeholders/015-002_toh8-2-chapters_7_to_72_the_perfection_of_wisdom_in_one_hundred_thousand_lines.xml
@@ -11,11 +11,12 @@
                 <title type="otherTitle" xml:lang="Bo-Ltn">shes rab kyi pha rol tu phyin pa stong phrag brgya pa/</title>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.3 <date>2021</date>
+                <edition>v 0.0.4 <date>2021</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="">
+            <publicationStmt status="3">
                 <idno xml:id="UT22084-015-002"/>
+                <date/>
             </publicationStmt>
             <sourceDesc>
                 <bibl key="toh8-2" type="text">
@@ -45,9 +46,11 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-06-16T16:14:42.595Z" user="admin">16/06/2022 16:14:42</note>
+                <note type="lastUpdated" date-time="2022-08-04T09:29:58.494Z" user="admin">04/08/2022 09:29:58</note>
                 <note type="updated" update="text-version" value="0.0.2" date-time="2021-02-23T18:55:36.252Z" user="john">Split from original single Toh 8 file</note>
                 <note type="updated" update="text-version" value="0.0.3" date-time="2022-06-16T16:14:40.597Z" user="cabie-sim">Auto (update-titles)</note>
+                <note type="updated" update="translation-status" value="3" date-time="2022-08-04T09:29:52.243Z" user="line-tofte">3</note>
+                <note type="updated" update="text-version" value="0.0.4" date-time="2022-08-04T09:29:52.243Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
