--- a/translations/kangyur/placeholders/015-002_toh8-2-chapters_7_to_72_the_perfection_of_wisdom_in_one_hundred_thousand_lines.xml
+++ b/translations/kangyur/placeholders/015-002_toh8-2-chapters_7_to_72_the_perfection_of_wisdom_in_one_hundred_thousand_lines.xml
@@ -11,9 +11,11 @@
                 <title type="otherTitle" xml:lang="Bo-Ltn">shes rab kyi pha rol tu phyin pa stong phrag brgya pa/</title>
                 <author role="translatorMain" ref="eft:team-60"/>
                 <author role="translatorEng" ref="eft:person-211">Gareth Sparham</author>
+                <consultant role="advisor" ref="eft:person-419">Kalsang Damdul</consultant>
+                <consultant role="advisor" ref="eft:person-420">Losang Gyaltsen</consultant>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.6 <date>2021</date>
+                <edition>v 0.0.7 <date>2021</date>
                 </edition>
             </editionStmt>
             <publicationStmt status="3">
@@ -48,13 +50,14 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-08-04T09:32:55.523Z" user="admin">04/08/2022 09:32:55</note>
+                <note type="lastUpdated" date-time="2022-08-04T09:43:16.756Z" user="admin">04/08/2022 09:43:16</note>
                 <note type="updated" update="text-version" value="0.0.2" date-time="2021-02-23T18:55:36.252Z" user="john">Split from original single Toh 8 file</note>
                 <note type="updated" update="text-version" value="0.0.3" date-time="2022-06-16T16:14:40.597Z" user="cabie-sim">Auto (update-titles)</note>
                 <note type="updated" update="translation-status" value="3" date-time="2022-08-04T09:29:52.243Z" user="line-tofte">3</note>
                 <note type="updated" update="text-version" value="0.0.4" date-time="2022-08-04T09:29:52.243Z" user="line-tofte">Auto (update-publication-status)</note>
                 <note type="updated" update="text-version" value="0.0.5" date-time="2022-08-04T09:30:39.921Z" user="line-tofte">Auto (update-contributors)</note>
                 <note type="updated" update="text-version" value="0.0.6" date-time="2022-08-04T09:32:49.4Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="text-version" value="0.0.7" date-time="2022-08-04T09:43:08.536Z" user="line-tofte">Auto (update-contributors)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
