--- a/translations/tengyur/placeholders/002-002_toh1181-hevajratantrapanjikapadmin.xml
+++ b/translations/tengyur/placeholders/002-002_toh1181-hevajratantrapanjikapadmin.xml
@@ -16,10 +16,10 @@
                 <author role="translatorEng" ref="contributors.xml#person-309">Doris Unterthurner</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.3 <date>2020</date>
+                <edition>v 0.0.4 <date>2020</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="3">
+            <publicationStmt status="2.h">
                 <idno xml:id="UT23703-002-002"/>
                 <date/>
             </publicationStmt>
@@ -27,9 +27,9 @@
                 <bibl key="toh1181" type="text">
                     <ref>Toh 1181</ref>
                     <biblScope>ff. 126v-173r</biblScope>
-                    <author xml:lang="Sa-Ltn" ref="eft:entity-14784">Saroruhavajra</author>
-                    <author xml:lang="bo" role="translatorTib" ref="eft:entity-14782">ཞུ་ཆེན་གྱི་ལོ་ཙ་བ་ཁུ་སྟོན་དངོས་གྲུབ།</author>
-                    <author xml:lang="bo" role="translatorTib" ref="eft:entity-14783">རྒྱ་གར་གྱི་མཁན་པོ་མཁས་པ་ཆེན་པོ་ཀྶི་ཏི་ག་རྦྷའི་ཞལ་སྔ་ནས།</author>
+                    <author ref="eft:entity-17540" xml:lang="Sa-Ltn">Saroruhavajra</author>
+                    <author role="translatorTib" ref="eft:entity-17538" xml:lang="Bo-Ltn">zhu chen gyi lo tsa ba khu ston dngos grub</author>
+                    <author role="translatorTib" ref="eft:entity-17539" xml:lang="Sa-Ltn">Kṣitigarbhapāda</author>
                     <location work="UT23703" count-pages="94">
                         <volume number="2" start-page="252" end-page="345"/>
                     </location>
@@ -38,13 +38,15 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2021-04-20T13:15:27.934Z" user="admin">20/04/2021 13:15:27</note>
+                <note type="lastUpdated" date-time="2022-08-04T13:05:54.18Z" user="admin">04/08/2022 13:05:54</note>
                 <note type="updated" update="text-version" value="0.0.1" date-time="2020-06-10T07:05:11.135Z" user="line-tofte">0.0.1</note>
                 <note type="updated" update="translation-status" value="3" date-time="2020-06-10T07:05:11.135Z" user="line-tofte">3</note>
                 <note type="updated" update="publication-date" value="" date-time="2020-06-10T07:05:11.135Z" user="line-tofte"/>
                 <note type="updated" update="text-version" value="0.0.2" date-time="2020-09-10T06:47:47.42Z" user="line-tofte">Auto (update-contributors)</note>
-                <note type="updated" update="import" value="fileDesc" import="tengyur-data-1180-1304_PH_new_v2.3.xml" date-time="2021-03-26T10:04:54.502Z" user="admin"/>
-    <note type="updated" update="text-version" value="0.0.3" date-time="2021-04-20T13:15:23.449Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="text-version" value="0.0.3" date-time="2021-04-20T13:15:23.449Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="import" value="fileDesc" import="tengyur-data-1180-1304_PH_new_v2.4.xml" date-time="2021-11-02T12:58:22.645Z" user="admin"/>
+                <note type="updated" update="translation-status" value="2.h" date-time="2022-08-04T13:05:45.981Z" user="line-tofte">2.h</note>
+                <note type="updated" update="text-version" value="0.0.4" date-time="2022-08-04T13:05:45.981Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
