--- a/translations/kangyur/placeholders/059-011_toh168-the_questions_of_vimalaprabha.xml
+++ b/translations/kangyur/placeholders/059-011_toh168-the_questions_of_vimalaprabha.xml
@@ -17,11 +17,11 @@
                 <sponsor ref="sponsors.xml#sponsor-33">Huizi Zuo and family</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.2 <date>2020</date>
+                <edition>v 0.0.3 <date>2020</date>
                 </edition>
             </editionStmt>
 
-            <publicationStmt status="3">
+            <publicationStmt status="2.h">
                 <idno xml:id="UT22084-059-011"/>
                 <date/>
             </publicationStmt>
@@ -37,9 +37,11 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-07-26T06:16:01.077Z" user="admin">26/07/2022 06:16:01</note>
+                <note type="lastUpdated" date-time="2022-08-08T10:23:07.107Z" user="admin">08/08/2022 10:23:07</note>
                 <note type="updated" update="text-version" value="0.0.1" date-time="2020-03-09T16:12:50.794Z" user="line-tofte">0.0.1</note>
                 <note type="updated" update="text-version" value="0.0.2" date-time="2022-07-26T06:15:53.372Z" user="cabie-sim">Auto (update-titles)</note>
+                <note type="updated" update="translation-status" value="2.h" date-time="2022-08-08T10:22:59.12Z" user="line-tofte">2.h</note>
+                <note type="updated" update="text-version" value="0.0.3" date-time="2022-08-08T10:22:59.12Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
