--- a/translations/kangyur/placeholders/059-011_toh168-the_questions_of_vimalaprabha.xml
+++ b/translations/kangyur/placeholders/059-011_toh168-the_questions_of_vimalaprabha.xml
@@ -9,15 +9,14 @@
                 <title type="mainTitle" xml:lang="Bo-Ltn">dri med 'od kyis zhus pa/</title>
                 <title type="otherTitle" xml:lang="zh">《無垢光所問經》</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">dri ma med pa'i 'od kyis zhus pa</title>
-                <author role="translatorMain" ref="contributors.xml#team-6"/>
-                <author role="translatorEng" ref="contributors.xml#person-23">Bruno Galasek-Hul</author>
-                <author role="translatorEng" ref="contributors.xml#person-25">Lama Kunga Thartse Rinpoche</author>
-                <author role="translatorEng" ref="contributors.xml#person-24">Roxanne Sooshani</author>
-                <consultant role="projectManager" ref="contributors.xml#person-23">Bruno Galasek-Hul</consultant>
+                <author role="translatorMain" ref="eft:team-6"/>
+                <author role="translatorEng" ref="eft:person-23">Bruno Galasek-Hul</author>
+                <author role="translatorEng" ref="eft:person-25">Lama Kunga Thartse Rinpoche</author>
+                <consultant role="projectManager" ref="eft:person-23">Bruno Galasek-Hul</consultant>
                 <sponsor ref="sponsors.xml#sponsor-33">Huizi Zuo and family</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.3 <date>2020</date>
+                <edition>v 0.0.4 <date>2020</date>
                 </edition>
             </editionStmt>
 
@@ -37,11 +36,12 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-08-08T10:23:07.107Z" user="admin">08/08/2022 10:23:07</note>
+                <note type="lastUpdated" date-time="2022-08-08T10:24:01.562Z" user="admin">08/08/2022 10:24:01</note>
                 <note type="updated" update="text-version" value="0.0.1" date-time="2020-03-09T16:12:50.794Z" user="line-tofte">0.0.1</note>
                 <note type="updated" update="text-version" value="0.0.2" date-time="2022-07-26T06:15:53.372Z" user="cabie-sim">Auto (update-titles)</note>
                 <note type="updated" update="translation-status" value="2.h" date-time="2022-08-08T10:22:59.12Z" user="line-tofte">2.h</note>
                 <note type="updated" update="text-version" value="0.0.3" date-time="2022-08-08T10:22:59.12Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="text-version" value="0.0.4" date-time="2022-08-08T10:23:53.598Z" user="line-tofte">Auto (update-contributors)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
