--- a/translations/kangyur/placeholders/091-064_toh667-the_tantra_of_mahakala.xml
+++ b/translations/kangyur/placeholders/091-064_toh667-the_tantra_of_mahakala.xml
@@ -4,18 +4,19 @@
     <teiHeader>
         <fileDesc>
             <titleStmt>
-                <title type="mainTitle" xml:lang="Bo-Ltn">nag po chen pa'i rgyud/</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">mahākālatantra</title>
                 <title type="mainTitle" xml:lang="en">The Tantra of Mahākāla</title>
-                <title type="otherTitle" xml:lang="Bo-Ltn">dpal nag po chen pa'i rgyud/</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">mahākālatantra</title>
+                <title type="mainTitle" xml:lang="Bo-Ltn">nag po chen pa'i rgyud/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">śrīmahākālatantra</title>
-    <author role="translatorMain" ref="contributors.xml#team-9"/>
-            
-    <consultant role="projectManager" ref="contributors.xml#person-50">Dr. Andreas Doctor</consultant>
-    <author role="translatorEng" ref="contributors.xml#person-274">Adam Krug</author>
+                <title type="otherTitle" xml:lang="Bo-Ltn">dpal nag po chen pa'i rgyud/</title>
+                <author role="translatorMain" ref="eft:team-9"/>
+                <consultant role="projectManager" ref="eft:person-50">Andreas Doctor</consultant>
+                <author role="translatorEng" ref="eft:person-274">Adam Krug</author>
+                <editor role="reviser" ref="eft:person-319">Ryan Conlon</editor>
+                <consultant role="dharmaMaster" ref="eft:person-40">Chökyi Nyima Rinpoche</consultant>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.1.1 <date>2019</date>
+                <edition>v 0.1.2 <date>2019</date>
                 </edition>
             </editionStmt>
 
@@ -35,9 +36,12 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-08-08T14:12:39.759Z" user="admin">08/08/2022 14:12:39</note>
-<note type="updated" update="text-version" value="v 0.1.0" date-time="2019-12-13T10:07:02.613Z" user="john">v 0.1.0</note>
-<note type="updated" update="translation-status" value="3" date-time="2019-12-13T10:07:02.613Z" user="john">3</note>    <note type="updated" update="translation-status" value="2.h" date-time="2022-08-08T14:12:31.727Z" user="line-tofte">2.h</note>    <note type="updated" update="text-version" value="0.1.1" date-time="2022-08-08T14:12:31.727Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="lastUpdated" date-time="2022-08-08T14:13:46.978Z" user="admin">08/08/2022 14:13:46</note>
+                <note type="updated" update="text-version" value="v 0.1.0" date-time="2019-12-13T10:07:02.613Z" user="john">v 0.1.0</note>
+                <note type="updated" update="translation-status" value="3" date-time="2019-12-13T10:07:02.613Z" user="john">3</note>
+                <note type="updated" update="translation-status" value="2.h" date-time="2022-08-08T14:12:31.727Z" user="line-tofte">2.h</note>
+                <note type="updated" update="text-version" value="0.1.1" date-time="2022-08-08T14:12:31.727Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="text-version" value="0.1.2" date-time="2022-08-08T14:13:39.003Z" user="line-tofte">Auto (update-contributors)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
