--- a/translations/kangyur/placeholders/091-068_toh671-the_sovereign_tantra_in_praise_of_the_goddess_kali.xml
+++ b/translations/kangyur/placeholders/091-068_toh671-the_sovereign_tantra_in_praise_of_the_goddess_kali.xml
@@ -15,14 +15,13 @@
     <author role="translatorEng" ref="contributors.xml#person-274">Adam Krug</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.1.0 <date>2019</date>
+                <edition>v 0.1.1 <date>2019</date>
                 </edition>
             </editionStmt>
 
-            <publicationStmt status="3">
+            <publicationStmt status="2.h">
                 <idno xml:id="UT22084-091-068"/>
                 <date/>
-
             </publicationStmt>
             <sourceDesc>
                 <bibl key="toh671" type="text">
@@ -36,9 +35,9 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2020-04-30T09:38:13.634Z" user="admin">30/04/2020 09:38:13</note>
+                <note type="lastUpdated" date-time="2022-08-08T14:20:46.449Z" user="admin">08/08/2022 14:20:46</note>
 <note type="updated" update="text-version" value="v 0.1.0" date-time="2019-12-13T10:10:14.996Z" user="john">v 0.1.0</note>
-<note type="updated" update="translation-status" value="3" date-time="2019-12-13T10:10:14.996Z" user="john">3</note>
+<note type="updated" update="translation-status" value="3" date-time="2019-12-13T10:10:14.996Z" user="john">3</note>    <note type="updated" update="translation-status" value="2.h" date-time="2022-08-08T14:20:38.425Z" user="line-tofte">2.h</note>    <note type="updated" update="text-version" value="0.1.1" date-time="2022-08-08T14:20:38.425Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
