--- a/translations/kangyur/placeholders/091-068_toh671-the_sovereign_tantra_in_praise_of_the_goddess_kali.xml
+++ b/translations/kangyur/placeholders/091-068_toh671-the_sovereign_tantra_in_praise_of_the_goddess_kali.xml
@@ -4,18 +4,19 @@
     <teiHeader>
         <fileDesc>
             <titleStmt>
-                <title type="mainTitle" xml:lang="Bo-Ltn">lha mo nag mo'i bstod pa rgyal po'i rgyud/</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">kālīpraśaṃsārājatantra</title>
                 <title type="mainTitle" xml:lang="en">The Sovereign Tantra, In Praise of the Goddess Kālī</title>
-                <title type="otherTitle" xml:lang="Bo-Ltn">dpal lha mo nag mo'i bstod pa rgyal po'i rgyud/</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">kālīpraśaṃsārājatantra</title>
+                <title type="mainTitle" xml:lang="Bo-Ltn">lha mo nag mo'i bstod pa rgyal po'i rgyud/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">śrīdevīkālīpraśaṃsārājatantra</title>
-    <author role="translatorMain" ref="contributors.xml#team-9"/>
-            
-    <consultant role="projectManager" ref="contributors.xml#person-50">Dr. Andreas Doctor</consultant>
-    <author role="translatorEng" ref="contributors.xml#person-274">Adam Krug</author>
+                <title type="otherTitle" xml:lang="Bo-Ltn">dpal lha mo nag mo'i bstod pa rgyal po'i rgyud/</title>
+                <author role="translatorMain" ref="eft:team-9"/>
+                <consultant role="projectManager" ref="eft:person-50">Andreas Doctor</consultant>
+                <author role="translatorEng" ref="eft:person-274">Adam Krug</author>
+                <editor role="reviser" ref="eft:person-319">Ryan Conlon</editor>
+                <consultant role="dharmaMaster" ref="eft:person-40">Chökyi Nyima Rinpoche</consultant>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.1.1 <date>2019</date>
+                <edition>v 0.1.2 <date>2019</date>
                 </edition>
             </editionStmt>
 
@@ -35,9 +36,12 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-08-08T14:20:46.449Z" user="admin">08/08/2022 14:20:46</note>
-<note type="updated" update="text-version" value="v 0.1.0" date-time="2019-12-13T10:10:14.996Z" user="john">v 0.1.0</note>
-<note type="updated" update="translation-status" value="3" date-time="2019-12-13T10:10:14.996Z" user="john">3</note>    <note type="updated" update="translation-status" value="2.h" date-time="2022-08-08T14:20:38.425Z" user="line-tofte">2.h</note>    <note type="updated" update="text-version" value="0.1.1" date-time="2022-08-08T14:20:38.425Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="lastUpdated" date-time="2022-08-08T14:21:49.734Z" user="admin">08/08/2022 14:21:49</note>
+                <note type="updated" update="text-version" value="v 0.1.0" date-time="2019-12-13T10:10:14.996Z" user="john">v 0.1.0</note>
+                <note type="updated" update="translation-status" value="3" date-time="2019-12-13T10:10:14.996Z" user="john">3</note>
+                <note type="updated" update="translation-status" value="2.h" date-time="2022-08-08T14:20:38.425Z" user="line-tofte">2.h</note>
+                <note type="updated" update="text-version" value="0.1.1" date-time="2022-08-08T14:20:38.425Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="text-version" value="0.1.2" date-time="2022-08-08T14:21:41.739Z" user="line-tofte">Auto (update-contributors)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
