--- a/translations/kangyur/placeholders/091-069_toh672,1088-the_hundred_and_eight_names_of_the_goddess_kali.xml
+++ b/translations/kangyur/placeholders/091-069_toh672,1088-the_hundred_and_eight_names_of_the_goddess_kali.xml
@@ -17,11 +17,11 @@
     <author role="translatorEng" ref="contributors.xml#person-274">Adam Krug</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.1.0 <date>2019</date>
+                <edition>v 0.1.1 <date>2019</date>
                 </edition>
             </editionStmt>
 
-            <publicationStmt status="3">
+            <publicationStmt status="2.h">
                 <idno xml:id="UT22084-091-069"/>
                 <date/>
             </publicationStmt>
@@ -46,10 +46,10 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2020-04-30T09:39:01.854Z" user="admin">30/04/2020 09:39:01</note>
+                <note type="lastUpdated" date-time="2022-08-08T14:32:43.515Z" user="admin">08/08/2022 14:32:43</note>
             
 <note type="updated" update="text-version" value="v 0.1.0" date-time="2019-12-13T10:10:53.016Z" user="john">v 0.1.0</note>
-<note type="updated" update="translation-status" value="3" date-time="2019-12-13T10:10:53.016Z" user="john">3</note>
+<note type="updated" update="translation-status" value="3" date-time="2019-12-13T10:10:53.016Z" user="john">3</note>    <note type="updated" update="translation-status" value="2.h" date-time="2022-08-08T14:32:35.52Z" user="line-tofte">2.h</note>    <note type="updated" update="text-version" value="0.1.1" date-time="2022-08-08T14:32:35.52Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
