--- a/translations/kangyur/placeholders/091-069_toh672,1088-the_hundred_and_eight_names_of_the_goddess_kali.xml
+++ b/translations/kangyur/placeholders/091-069_toh672,1088-the_hundred_and_eight_names_of_the_goddess_kali.xml
@@ -4,20 +4,19 @@
     <teiHeader>
         <fileDesc>
             <titleStmt>
-                <title type="mainTitle" xml:lang="Bo-Ltn">lha mo nag mo'i mtshan brgya rtsa brgyad pa/</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">kālīnāmāṣṭaśatakam</title>
                 <title type="mainTitle" xml:lang="en">The Hundred and Eight Names of the Goddess Kālī</title>
-                <title type="otherTitle" xml:lang="Bo-Ltn">dpal lha mo nag mo'i mtshan brgya rtsa brgyad pa/</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">kālīnāmāṣṭaśatakam</title>
+                <title type="mainTitle" xml:lang="Bo-Ltn">lha mo nag mo'i mtshan brgya rtsa brgyad pa/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">śrīdevīkālīnāmāṣṭaśatakam</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">dpal lha mo nag mo'i mtshan brgya rtsa brgyad pa/</title>
-                <title type="otherTitle" xml:lang="Sa-Ltn">śrīdevīkālīnāmāṣṭaśatakam</title>
-    <author role="translatorMain" ref="contributors.xml#team-9"/>
-            
-    <consultant role="projectManager" ref="contributors.xml#person-50">Dr. Andreas Doctor</consultant>
-    <author role="translatorEng" ref="contributors.xml#person-274">Adam Krug</author>
+                <author role="translatorMain" ref="eft:team-9"/>
+                <consultant role="projectManager" ref="eft:person-50">Andreas Doctor</consultant>
+                <author role="translatorEng" ref="eft:person-274">Adam Krug</author>
+                <editor role="reviser" ref="eft:person-319">Ryan Conlon</editor>
+                <consultant role="dharmaMaster" ref="eft:person-40">Chökyi Nyima Rinpoche</consultant>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.1.1 <date>2019</date>
+                <edition>v 0.1.2 <date>2019</date>
                 </edition>
             </editionStmt>
 
@@ -46,10 +45,12 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-08-08T14:32:43.515Z" user="admin">08/08/2022 14:32:43</note>
-            
-<note type="updated" update="text-version" value="v 0.1.0" date-time="2019-12-13T10:10:53.016Z" user="john">v 0.1.0</note>
-<note type="updated" update="translation-status" value="3" date-time="2019-12-13T10:10:53.016Z" user="john">3</note>    <note type="updated" update="translation-status" value="2.h" date-time="2022-08-08T14:32:35.52Z" user="line-tofte">2.h</note>    <note type="updated" update="text-version" value="0.1.1" date-time="2022-08-08T14:32:35.52Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="lastUpdated" date-time="2022-08-08T14:33:33.095Z" user="admin">08/08/2022 14:33:33</note>
+                <note type="updated" update="text-version" value="v 0.1.0" date-time="2019-12-13T10:10:53.016Z" user="john">v 0.1.0</note>
+                <note type="updated" update="translation-status" value="3" date-time="2019-12-13T10:10:53.016Z" user="john">3</note>
+                <note type="updated" update="translation-status" value="2.h" date-time="2022-08-08T14:32:35.52Z" user="line-tofte">2.h</note>
+                <note type="updated" update="text-version" value="0.1.1" date-time="2022-08-08T14:32:35.52Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="text-version" value="0.1.2" date-time="2022-08-08T14:33:25.055Z" user="line-tofte">Auto (update-contributors)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
