--- a/translations/kangyur/placeholders/090-037_toh593-the_incantation_of_sitatapatra_aparajita.xml
+++ b/translations/kangyur/placeholders/090-037_toh593-the_incantation_of_sitatapatra_aparajita.xml
@@ -20,10 +20,10 @@
                 <editor role="copyEditor" ref="eft:person-92">Laura Goetz</editor>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.12 <date>2020</date>
+                <edition>v 0.0.13 <date>2020</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="2.e">
+            <publicationStmt status="2.d">
                 <idno xml:id="UT22084-090-037"/>
                 <date/>
             </publicationStmt>
@@ -39,7 +39,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-07-15T12:01:17.724Z" user="admin">15/07/2022 12:01:17</note>
+                <note type="lastUpdated" date-time="2022-08-09T08:11:06.947Z" user="admin">09/08/2022 08:11:06</note>
                 <note type="updated" update="translation-status" value="4" date-time="2020-10-02T13:56:52.274Z" user="line-tofte">4</note>
                 <note type="updated" update="text-version" value="0.0.1" date-time="2020-10-02T13:56:52.274Z" user="line-tofte">0.0.1</note>
                 <note type="updated" update="translation-status" value="3" date-time="2020-11-30T09:48:12.898Z" user="line-tofte">3</note>
@@ -58,6 +58,8 @@
                 <note type="updated" update="translation-status" value="2.e" date-time="2022-07-15T12:00:33.389Z" user="line-tofte">2.e</note>
                 <note type="updated" update="text-version" value="0.0.11" date-time="2022-07-15T12:00:33.389Z" user="line-tofte">Auto (update-publication-status)</note>
                 <note type="updated" update="text-version" value="0.0.12" date-time="2022-07-15T12:01:09.883Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="translation-status" value="2.d" date-time="2022-08-09T08:10:58.967Z" user="line-tofte">2.d</note>
+                <note type="updated" update="text-version" value="0.0.13" date-time="2022-08-09T08:10:58.967Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
